--- a/frontend/todo/src/app/app.component.html
+++ b/frontend/todo/src/app/app.component.html
@@ -1,6 +1,5 @@
-<!-- <app-welcome></app-welcome>  -->
-<app-login></app-login>
-
-<!-- <div>Component Div</div> -->
-
+<app-menu></app-menu>
+<br><br>
 <router-outlet></router-outlet>
+<br><br>
+<app-footer></app-footer>
