--- a/frontend/todo/src/app/welcome/welcome.component.html
+++ b/frontend/todo/src/app/welcome/welcome.component.html
@@ -1,1 +1,8 @@
-<p>welcome works!</p>
+<div>
+    Welcome {{name}}. 
+    Welcome to our todo app.
+</div>
+<div>
+    You can manage your todos <a routerLink="/todos">here</a> 
+</div>
+
