section hands on with angular completed

--- a/frontend/todo/src/app/footer/footer.component.html
+++ b/frontend/todo/src/app/footer/footer.component.html
@@ -1,1 +1,5 @@
-<br><br> FOOTER 
+<footer class="footer">
+    <div class="container"> 
+        <span class="text-white">All Rights Reserved 2023 &#64; My-Todo</span>
+    </div>
+</footer>
