--- a/frontend/todo/src/app/welcome/welcome.component.html
+++ b/frontend/todo/src/app/welcome/welcome.component.html
@@ -1,8 +1,6 @@
-<div>
-    Welcome {{name}}. 
-    Welcome to our todo app.
-</div>
-<div>
-    You can manage your todos <a routerLink="/todos">here</a> 
+
+<div class="container"> 
+    <h1>Welcome!</h1>
+    Welcome {{name}}. Welcome to our todo app. You can manage your todos <a routerLink="/todos">here</a> 
 </div>
 
