--- a/frontend/todo/src/app/login/login.component.html
+++ b/frontend/todo/src/app/login/login.component.html
@@ -1,5 +1,12 @@
-<small *ngIf='invalidLogin'>{{errorMessage}}</small>
+<div class="container">
+  <h1>Login!</h1>
+  <div class="alert alert-warning" *ngIf="invalidLogin">
+    {{ errorMessage }}
+  </div>
 
-User Name : <input type="text" name="username" [(ngModel)]="username"> 
-Password  : <input type="password" name="password" [(ngModel)]="password">
-<button (click)=handleLogin()>Login</button>
+  <div>
+    User Name :<input type="text" name="username" [(ngModel)]="username" />
+    Password :<input type="password" name="password" [(ngModel)]="password" />
+    <button class="btn btn-success" (click)="handleLogin()">Login</button>
+  </div>
+</div>
